# manga_find

./: pyproject.toml
docs/: User Journey - Manga App.txt
manga_find/: __init__.py  __main__.py  manga.py
